--- a/front_end/timelinev3.html
+++ b/front_end/timelinev3.html
@@ -713,7 +713,8 @@
                                 <option value="vamp-fatale">M9S: Vamp Fatale</option>
                                 <option value="red-hot-and-deep-blue">M10S: Red Hot and Deep Blue</option>
                                 <option value="the-tyrant">M11S: The Tyrant</option>
-                                <option value="lindwurm">M12S P1: Lindwurm</option>
+                                <option value="lindwurm">M12S P1: Lindwurm I</option>
+                                <option value="lindwurm-ii">M12S P2: Lindwurm II</option>
                             </select>
                             <span className="w-px h-3 bg-gray-600 mx-2"></span>
                             <span className="text-gray-400 text-sm">Spec:</span>
